tests/cn-seq-test-gen/src/slf_sized_stack.pass.c.verify
return code: 1
cn-seq-test-gen/src/slf_sized_stack.pass.c:105:14: warning: deprecated keyword 'Owned', use 'RW' instead
    take S = Owned<struct sized_stack>(p);
             ^~~~~ 
[1/8]: IntList_nil -- pass
[2/8]: IntList_cons -- fail
[3/8]: IntList_length -- pass
[4/8]: create -- fail
[5/8]: sizeOf -- pass
[6/8]: push -- pass
[7/8]: pop -- fail
[8/8]: top -- pass
cn-seq-test-gen/src/slf_sized_stack.pass.c:63:43: error: Call to function with no spec: cn_malloc
  struct int_list *p = (struct int_list *)cn_malloc(sizeof(struct int_list));
                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
cn-seq-test-gen/src/slf_sized_stack.pass.c:117:49: error: Call to function with no spec: cn_malloc
  struct sized_stack *p = (struct sized_stack *)cn_malloc(sizeof(struct sized_stack));
                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
cn-seq-test-gen/src/slf_sized_stack.pass.c:154:5: error: Call to function with no spec: cn_free_sized
    cn_free_sized(data, sizeof(struct int_list));
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
